--- a/Template/main.html
+++ b/Template/main.html
@@ -13,7 +13,7 @@
   <div class="col-xs-12">
    <h1>RPi Web Server for automation</h1>
 
-   <!-- {% for pin in pins %}
+    {% for pin in pins %}
    {% if 'GPIO' in pins[pin].type}
 
    {% if pins[pin].state == true %}
@@ -32,7 +32,7 @@
          </div>
    {% endif %}
    {% endif %}
-   {% endfor %} -->
+   {% endfor %}
 
  </div>
 </body>
