--- a/templates/main.html
+++ b/templates/main.html
@@ -13,6 +13,12 @@
   <div class="col-xs-12">
     <h1>RPi Web Server for automation</h1>
 <div class="row">
+  <h2>HardCoded Motor is currently going a different direction <strong><_></strong></h2>
+ <a href="16/12/left" class="btn btn-block btn-lg btn-default" role="button">Turn off</a>
+ <a href="12/16/right" class="btn btn-block btn-lg btn-default" role="button">Turn off</a>
+</div>
+
+<div class="row">
     {% for pin in pins %}
    {% if 'GPIO' in pins[pin].type %}
       <div class="col-md-4">
