--- a/templates/main.html
+++ b/templates/main.html
@@ -13,9 +13,15 @@
   <div class="col-xs-12">
     <h1>RPi Web Server for automation</h1>
 <div class="row">
-  <h2>HardCoded Motor is currently going a different direction <strong><_></strong></h2>
- <a href="/16/12/left" class="btn btn-block btn-lg btn-default" role="button">Turn off</a>
- <a href="/12/16/right" class="btn btn-block btn-lg btn-default" role="button">Turn off</a>
+  <h4>HardCoded Motor is currently going a different direction <strong><_></strong></h4>
+{%if pins[12].state == true %}
+ <a href="/12/left" class="btn btn-block btn-lg btn-default" role="button">Turn</a>
+ {%elif pins[16].state == true%}
+ <a href="/12/right" class="btn btn-block btn-lg btn-default" role="button">Turn</a>
+{%else%}
+<a href="/12/left" class="btn btn-block btn-sm btn-default" role="button">Turn</a>
+<a href="/12/right" class="btn btn-block btn-sm btn-default" role="button">Turn</a>
+{%endif%}
 </div>
 
 <div class="row">
