split up and added extends and includes functionality

--- a/templates/conditions.html
+++ b/templates/conditions.html
@@ -4,6 +4,7 @@
 <div><h1>Welcome to the conditions Page</h1></div>
 <div>
   <h2>Arduino - Ph and Moisture</h2>
+  <a href="/conditions/clear" class="btn btn-block btn-lg btn-primary" role="button">ClearData</a></h2>
 {% include "arduino.html" %}
 </div>
 
