added read sensor button

--- a/templates/conditions.html
+++ b/templates/conditions.html
@@ -4,7 +4,10 @@
 <div><h1>Welcome to the conditions Page</h1></div>
 <div>
   <h2>Arduino - Ph and Moisture</h2>
-  <a href="/conditions/clear" class="btn btn-block btn-lg btn-primary" role="button">ClearData</a></h2>
+  <a href="/conditions/clear" class="btn btn-block btn-lg btn-primary col-xs-6" role="button">ClearData</a>
+  <a href="/conditions/readfrompi" class="btn btn-block btn-lg btn-primary col-xs-6" role="button">ReadSensor</a>
+
+
 {% include "arduino.html" %}
 </div>
 
