--- a/templates/index.html
+++ b/templates/index.html
@@ -5,24 +5,28 @@
 <div class="col-xs-12">
 
 <div class="row">
-<h4>HardCoded Motor is currently going a different direction <strong><_></strong></h4>
-  <div class="col-sm-6 col-sm-offset-3">
-{%if pins[12].state == true %}
-<a href="/12/left" class="btn btn-block btn-lg btn-default" role="button">Turn</a>
-{%elif pins[16].state == true%}
-<a href="/12/right" class="btn btn-block btn-lg btn-default" role="button">Turn</a>
-{%else%}
-<a href="/12/left" class="btn btn-block btn-sm btn-default" role="button">Turn</a>
-<a href="/12/right" class="btn btn-block btn-sm btn-default" role="button">Turn</a>
-{%endif%}
-</div>
-</div>
 
-<div class="row">
-<h4 class="col-xs-6">
-stuff  Page
-</h4>
+<div class="col-sm-6 col-sm-offset-3">
+<h4>Garden Water</h4>
 
+
+
+ {% if 'Pump' in pins[12].type %}
+    <div class="row pump">
+ {% if pins[12].state == true %}
+     <h2>{{ pins[12].type }} is currently <strong>on</strong>
+    <a href="/12/off" class="btn btn-block btn-lg btn-default" role="button">Turn off</a>
+</h2>
+ {% else %}
+         <h2>{{ pins[12].type }} is currently <strong>off</strong>
+         <a href="/12/on" class="btn btn-block btn-lg btn-primary" role="button">Turn on</a></h2>
+{% endif %}
+</div>
+ {% endif %}
+
+
+
+</div>
 </div>
 
 </div>
