--- a/templates/main.html
+++ b/templates/main.html
@@ -10,8 +10,8 @@
 </head>
 
 
-<body>
-  <div class="col-xs-12 col-sm-offset-1 col-sm-10">
+<body class="row col-xs-12 justify-content-xs-center">
+  <div class="col-xs-12 col-sm-10 offset-sm-1">
 
   {% include "nav.html" %}
 
