--- a/templates/index.html
+++ b/templates/index.html
@@ -4,15 +4,17 @@
 
 <div class="col-xs-12">
 
+<p>The Time is {{now}} </p>
+
 <div class="row">
-<h4>HardCoded Motor is currently going a different direction <strong><_></strong></h4>
+<h4>Pump status<strong><_></strong></h4>
   <div class="col-sm-6 col-sm-offset-3">
-{%if pins[12].state == true %}
-<a href="/12/left" class="btn btn-block btn-lg btn-default" role="button">Turn</a>
-{%elif pins[16].state == true%}
-<a href="/12/right" class="btn btn-block btn-lg btn-default" role="button">Turn</a>
+{%if pins[12].state != true %}
+<a href="/12/on" class="btn btn-block btn-lg btn-default" role="button">On</a>
+{%elif pins[12].state == true%}
+<a href="/12/off" class="btn btn-block btn-lg btn-default" role="button">Off</a>
 {%else%}
-<a href="/12/left" class="btn btn-block btn-sm btn-default" role="button">Turn</a>
+<a href="/12/on" class="btn btn-block btn-sm btn-default" role="button">Turn</a>
 <a href="/12/right" class="btn btn-block btn-sm btn-default" role="button">Turn</a>
 {%endif%}
 </div>
