--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light bg-success">
+<nav class="navbar navbar-expand-lg navbar-light bg-success">
   <a class="navbar-brand" href="/index">Web-grow</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
