--- a/templates/nav.html
+++ b/templates/nav.html
@@ -17,6 +17,9 @@
       <li class="nav-item">
         <a class="nav-link" href="/conditions">Conditions</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/datas">DataTable</a>
+      </li>
     </ul>
   </div>
 </nav>
